welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:8: error: not found: value nbBiscuit
   if (nbBiscuit<3){
       ^Poucet:11: error: not found: value nbBiscuit
   if (nbBiscuit>=3){
       ^